--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,26 +2,27 @@ body {
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
-    background: linear-gradient(135deg, #00bfa5, #1de9b6);
+    background: linear-gradient(180deg, #000000, #cecece);
     height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     color: white;
-    text-align: center;
+    text-align: center; 
 }
 
 .container {
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(0, 0, 0);
     padding: 50px;
     border-radius: 20px;
     backdrop-filter: blur(10px);
-    box-shadow: 0 0 20px rgba(0,0,0,0.2);
+    box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
 }
 
 .logo-section img {
     width: 120px;
     margin-bottom: 20px;
+    transform: scale(2.5);
 }
 
 h1 {
@@ -36,8 +37,8 @@ p {
 
 .btn {
     display: inline-block;
-    background: white;
-    color: #00bfa5;
+    background: black;
+    color: white;
     padding: 12px 30px;
     border-radius: 25px;
     text-decoration: none;
@@ -46,7 +47,7 @@ p {
 }
 
 .btn:hover {
-    background: #00bfa5;
+    background: #dabe04;
     color: white;
 }
 
